See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.86.00

              pamfile: Add -machine and -size .

              pamstretch: Reject very large scale factors instead of producing
              incorrect output.

              ppmbrighten: Fix crash with -normalize when there is only one
              intensity in the image.  Always broken - Ppmbrighten was new in
              the first Netpbm release in 1991.

18.12.29 BJH  Release 10.85.00

              pnmpaste: Add -nand, -nor, and -nxor.

              pamcut: add -cropleft, -cropright, -croptop, -cropbottom.

              ppmtobmp: respect -bpp with PBM input.

              bmptopnm: allow single color colormap with bpp 1.

              bmptopnm: validate plane count = 1.

              bmptopnm: Add RLE4 compression decoding.  This was ostensibly
              added in Netpbm 10.32 (February 2006), but never worked.
              
              Add pammixmulti.  Thanks Scott Pakin (scott+pbm@pakin.org).

              pamtotga: Add -cmap16 .
    
              pamtris: Add -rgb, -grayscale.  Add w parameter to vertex
              instructions.  Fix perspective correctness.  Thanks Lucas Brunno
              Luna <lucaslunar32@hotmail.com>.

              picttoppm: accept rectangle specifications in input that have
              the corners in any order, not just upper left, then lower right.

              pamtotga: identify compressed colormapped format in error
              message saying the program doesn't know how to interpret it.

              pamtotga: Ignore extra planes in black and white or grayscale
              input instead of generating junk output.

              Merge build: make old names for JPEG, TIFF, and PNG converter
              programs work (function previously omitted by design because it
              was too hard).
