@@ -8,6 +8,8 @@ not yet  BJH  Release 10.86.00
 
               pamfile: Add -machine and -size .
 
+              pamscale: Add -reportonly
+
               pamstretch: Reject very large scale factors instead of producing
               incorrect output.
 
